# sft-toolkit

./: README.md  data_utils.py  model_utils.py  pyproject.toml  trainer.py
examples/: train_with_lora.py
